--- a/apps/money-tracker-ui/jenkins/nginx-default.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-default.conf
@@ -17,6 +17,11 @@ server {
            proxy_pass http://192.168.1.118:18085;
       }
 
+      location ~* ^/about {
+           proxy_http_version 1.1;
+           proxy_pass http://192.168.1.118:18085;
+      }
+
       # redirect server error pages to the static page /40x.html
       error_page 404 /404.html;
           location = /40x.html {
