--- a/apps/money-tracker-ui/jenkins/nginx-default.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-default.conf
@@ -17,7 +17,7 @@ server {
            proxy_pass http://192.168.1.118:18085;
       }
 
-      location ~* ^/info/.* {
+      location ~* ^/info/(.*) {
            proxy_http_version 1.1;
            proxy_pass http://192.168.1.118:18085/$1;
       }
