--- a/apps/money-tracker-ui/jenkins/nginx-demo.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-demo.conf
@@ -9,15 +9,15 @@ server {
 
       location ~* ^/auth/ {
            proxy_http_version 1.1;
-           proxy_pass http://192.168.1.2:8083;
+           proxy_pass http://192.168.1.118:8083;
       }
 
       location ~* ^/api/ {
            proxy_http_version 1.1;
-           proxy_pass http://192.168.1.2:18086;
+           proxy_pass http://192.168.1.118:18086;
       }
 
-      location ~* ^/info/.* {
+      location ~* ^/info/(.*) {
            proxy_http_version 1.1;
            proxy_pass http://192.168.1.118:18086/$1;
       }
