--- a/apps/money-tracker-ui/jenkins/docker-compose.yml
+++ b/apps/money-tracker-ui/jenkins/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "18081:80"
     volumes:
-      - ./nginx-default.conf:/etc/nginx/conf.d/default.conf
+      - /home/clematis/mt-ui/nginx-default.conf:/etc/nginx/conf.d/default.conf
     networks:
       - clematis
     restart: unless-stopped
@@ -18,7 +18,7 @@ services:
     ports:
       - "18082:80"
     volumes:
-      - ./nginx-demo.conf:/etc/nginx/conf.d/default.conf
+      - /home/clematis/mt-ui/nginx-demo.conf:/etc/nginx/conf.d/default.conf
     networks:
       - clematis
     restart: unless-stopped
