--- a/package.json
+++ b/package.json
@@ -12,50 +12,48 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~18.1.0",
-    "@angular/common": "~18.1.0",
-    "@angular/compiler": "~18.1.0",
-    "@angular/core": "~18.1.0",
-    "@angular/forms": "~18.1.0",
-    "@angular/localize": "~18.1.0",
-    "@angular/material": "~18.1.0",
-    "@angular/material-moment-adapter": "~18.1.0",
-    "@angular/platform-browser": "~18.1.0",
-    "@angular/platform-browser-dynamic": "~18.1.0",
-    "@angular/router": "~18.1.0",
-
+    "@angular/animations": "^18.2.5",
+    "@angular/cdk": "^18.2.5",
+    "@angular/common": "^18.2.5",
+    "@angular/compiler": "^18.2.5",
+    "@angular/core": "^18.2.5",
+    "@angular/forms": "^18.2.5",
+    "@angular/localize": "^18.2.5",
+    "@angular/material": "^18.2.5",
+    "@angular/material-moment-adapter": "^18.2.5",
+    "@angular/platform-browser": "^18.2.5",
+    "@angular/platform-browser-dynamic": "^18.2.5",
+    "@angular/router": "^18.2.5",
     "@fortawesome/angular-fontawesome": "0.15.0",
     "@fortawesome/fontawesome-svg-core": "6.5.1",
     "@fortawesome/free-solid-svg-icons": "6.5.1",
-    "@lagoshny/ngx-hateoas-client": "^3.8.1",
+    "@lagoshny/ngx-hateoas-client": "^3.9.0",
     "@ngneat/content-loader": "^7.0.0",
     "@nx/angular": "19.5.7",
     "angular8-yandex-maps": "18.1.1",
     "dayjs": "latest",
-    "echarts": "^5.4.3",
+    "echarts": "^5.5.1",
     "keycloak-angular": "^16.0.1",
     "keycloak-js": "^22.0.5",
     "moment": "latest",
     "ngx-echarts": "^16.2.0",
-    "postcss": "^8.4.18",
-    "prettier": "^2.7.1",
     "rxjs": "~7.8.1",
-    "sass": "^1.62.1",
-    "sass-loader": "^13.2.2",
-    "tailwindcss": "^3.3.2",
-    "tslib": "^2.5.2",
-    "zone.js": "~0.14.3"
+    "sass": "^1.79.3",
+    "sass-loader": "^13.3.3",
+    "tailwindcss": "^3.4.12",
+    "tslib": "^2.7.0",
+    "zone.js": "^0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~18.1.0",
-    "@angular-devkit/core": "~18.1.0",
-    "@angular-devkit/schematics": "~18.1.0",
-    "@angular-eslint/eslint-plugin": "^18.0.1",
-    "@angular-eslint/eslint-plugin-template": "^18.0.1",
-    "@angular-eslint/template-parser": "^18.0.1",
-    "@angular/cli": "~18.1.0",
-    "@angular/compiler-cli": "~18.1.0",
-    "@angular/language-service": "~18.1.0",
+    "@angular-devkit/build-angular": "^18.2.5",
+    "@angular-devkit/core": "^18.2.5",
+    "@angular-devkit/schematics": "^18.2.5",
+    "@angular-eslint/eslint-plugin": "^18.3.1",
+    "@angular-eslint/eslint-plugin-template": "^18.3.1",
+    "@angular-eslint/template-parser": "^18.3.1",
+    "@angular/cli": "^18.2.5",
+    "@angular/compiler-cli": "^18.2.5",
+    "@angular/language-service": "^18.2.5",
     "@nx/devkit": "19.5.7",
     "@nx/eslint": "19.5.7",
     "@nx/eslint-plugin": "19.5.7",
@@ -63,31 +61,31 @@
     "@nx/js": "19.5.7",
     "@nx/playwright": "19.5.7",
     "@nx/workspace": "19.5.7",
-    "@playwright/test": "^1.36.0",
-    "@schematics/angular": "~18.1.0",
-    "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
-    "@types/jest": "^29.4.0",
+    "@playwright/test": "^1.47.2",
+    "@schematics/angular": "^18.2.5",
+    "@swc-node/register": "^1.10.9",
+    "@swc/core": "^1.7.26",
+    "@swc/helpers": "^0.5.13",
+    "@types/jest": "^29.5.13",
     "@types/node": "18.16.9",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
-    "@typescript-eslint/utils": "^7.16.0",
-    "autoprefixer": "^10.4.0",
-    "eslint": "~8.57.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-playwright": "^0.15.3", 
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "jest-preset-angular": "~14.1.0",
-    "jsonc-eslint-parser": "^2.1.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "@typescript-eslint/utils": "^7.18.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-playwright": "^0.15.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-preset-angular": "^14.2.4",
+    "jsonc-eslint-parser": "^2.4.0",
     "ng-packagr": "~18.1.0",
     "nx": "19.5.7",
-    "postcss": "^8.4.5",
+    "postcss": "^8.4.47",
     "postcss-url": "~10.1.3",
-    "prettier": "^2.6.2",
-    "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
-    "typescript": "~5.5.2"
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
