--- a/apps/money-tracker-ui/jenkins/nginx-default.conf
+++ b/apps/money-tracker-ui/jenkins/nginx-default.conf
@@ -7,9 +7,9 @@ server {
       expires           0;
       add_header        Cache-Control private;
 
-      location ~* ^/auth/ {
+      location ~* ^/auth/(.*) {
            proxy_http_version 1.1;
-           proxy_pass http://192.168.1.157:8080;
+           proxy_pass http://192.168.1.157:8080/$1;
       }
 
       location ~* ^/api/ {
