--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -35,7 +35,8 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "compilationMode": "partial"
   },
   "exclude": ["node_modules", "tmp"]
 }
