--- a/apps/money-tracker-ui/jenkins/docker-compose.yml
+++ b/apps/money-tracker-ui/jenkins/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - '18443:443'
     volumes:
       - /home/clematis/mt-ui/nginx-default.conf:/etc/nginx/conf.d/default.conf
-      - ${WORKSPACE}/docker/nginx/ssl:/etc/nginx/ssl:ro
+      - ssl_certs:/etc/nginx/ssl:ro
     networks:
       - clematis
     restart: unless-stopped
@@ -23,6 +23,9 @@ services:
     networks:
       - clematis
     restart: unless-stopped
+
+volumes:
+  ssl_certs:
 
 networks:
   clematis:
